# scratch_cpp

./: CMakeCache.txt  CMakeLists.txt  Makefile  balls.cpp  cmake_install.cmake  game.cpp  go  m.cpp  main.cpp  o  run  scratch.cpp  sit_id.json  tags  test.py  test.txt  test2.txt  tree  tree.cpp
